syntax = "proto3";

package skiserver;

option java_package = "org.e2eelab.skiserver.proto";

message user_info {
    string userId = 1;
    string deviceId = 2;
    string orgId = 3;
    string accessToken = 4;
    string ipAddress = 5;
}